<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/acc_button"
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="140dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/name_assigned"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="140dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/pet_breed"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="-280dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/yana" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_500"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_menu">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/addbtn_descrip"
        app:backgroundTint="@color/yellow"
        app:srcCompat="@drawable/ic_plus" />

</RelativeLayout>